syntax = "proto3";

package fintekkers.requests.transaction;

import "fintekkers/models/util/uuid.proto";
import "fintekkers/models/util/local_timestamp.proto";
import "fintekkers/models/position/position_filter.proto";

option java_multiple_files = true;

option java_outer_classname = "QueryTransactionRequestProtos";

message QueryTransactionRequestProto {
  string object_class = 1;
  string version = 2;

  //The list of UUIds to return
  repeated fintekkers.models.util.UUIDProto uuIds = 21;

  //A list of position filters that will filter securities that match.
  fintekkers.models.position.PositionFilterProto search_transaction_input = 22;

  //The as of date to query the data set
  fintekkers.models.util.LocalTimestampProto as_of = 23;

  //Max number of records to return
  int32 limit = 24;

  //How to order the results. TODO: Need to think through guidance of this
  // repeated fintekkers.models.position.FieldProto order_by = 25;
}


